<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
                
    
    <TextView
        android:id="@+id/imageSelectionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/imageSelectionTextView" />

    <Spinner
        android:id="@+id/imageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Images"
        android:prompt="@string/imageSelectorTitle"
        android:spinnerMode="dialog"
        />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<ImageView
        android:id="@+id/imageSpinnerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:src="@drawable/ic_launcher" />

    <CheckBox
        android:id="@+id/toggleImageCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/toggleImageCheckBoxMsg" />
	    
	    
	</LinearLayout>
    
    <TextView
        android:id="@+id/imageOpacityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/imageOpacityLabel" />

    <SeekBar
        android:id="@+id/imgOpacitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:max="@integer/opaque" />

    <TextView
        android:id="@+id/ratingBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/ratingBarLabel" />

    <RatingBar
        android:id="@+id/imgRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.25" />

    <Button
        android:id="@+id/submitRatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ratingButtonClicked"
        android:text="@string/submitRatingButton" />

    <TextView
        android:id="@+id/ratingSubmittedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratingSubmittedTextView"
        android:visibility="gone" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteRatingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone">

        <requestFocus />
    </AutoCompleteTextView>
	            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
